--- a/client/live.html
+++ b/client/live.html
@@ -14,11 +14,11 @@
         global_info.userid = 's1';
         global_info.role = 'student'; // student:学生, teacher:老师
         global_info.biz_type = 'live'; // live:直播, playback:回放, record:录制
-        global_info.pdf_addr = 'http://pano.botechnic.com/asset/android_new1.pdf';
+        global_info.pdf_addr = 'http://pano.botechnic.com:81/asset/android_new1.pdf';
         global_info.live_addr = 'rtmp://119.80.57.9:1935/live';
         global_info.publish_addr = 'rtmp://119.80.57.9:1935/live';
-        global_info.playback_addr = 'http://pano.botechnic.com/data/4/4_2.mp4';
-        global_info.socketio_addr = 'http://pano.botechnic.com';
+        global_info.playback_addr = 'http://pano.botechnic.com:81/data/4/4_2.mp4';
+        global_info.socketio_addr = 'http://pano.botechnic.com:81';
     </script>
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -128,7 +128,7 @@
     </div> <!-- <div id="right_panel"> -->
 
     <script src="./js/pdf.js"></script>
-    <script src="http://pano.botechnic.com/socket.io/socket.io.js"></script>
+    <script src="http://pano.botechnic.com:81/socket.io/socket.io.js"></script>
     <script src="./js/mj_tools.js"></script>
     <script src="./js/mj_control.js"></script>
     <script src="./js/mj_pdf.js"></script>
