--- a/client/playback.html
+++ b/client/playback.html
@@ -27,7 +27,8 @@
     <script type="text/javascript" src="js/srs.page.js"></script>
     <script type="text/javascript" src="js/srs.log.js"></script>
     <script type="text/javascript" src="js/srs.player.js"></script>
-    <script type="text/javascript" src="js/srs.utility.js"></script>   
+    <script type="text/javascript" src="js/srs.utility.js"></script>
+    <script type="text/javascript" src="js/mj_ajax.js"></script>
 </head>
 
 <body id ="teacher_body" style="visibility:hidden;z-index:20001;">
